force-app/main/default/objects/Common_fee__c/Common_fee__c.object-meta.xml
<CustomObject>
    <label>Common fee</label>
    <nameField>
        <label>Common fee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Common fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>