force-app/main/default/objects/Common_fee__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activity_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>On-duty Meal</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Purchasing Stationary</fullName>
            </value>
            <value>
                <fullName>Set up training class</fullName>
            </value>
            <value>
                <fullName>Composing Training Material</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Repair Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>