force-app/main/default/objects/Common_fee__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>BAO NK: this field use in &quot;lookup filter&quot; in General cost (field record type)</description>
    <label>Activity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training Request</fullName>
            </value>
            <value>
                <fullName>Business Travel Request</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Repair Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>