force-app/main/default/objects/Common_fee__c/fields/Criteria_2__c.field-meta.xml
<CustomField>
    <fullName>Criteria_2__c</fullName>
    <label>Criteria 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Training_Common_Fee_Criteria</valueSetName>
    </valueSet>
</CustomField>