force-app/main/default/objects/Common_fee__c/fields/Training_Amount_Paid_2__c.field-meta.xml
<CustomField>
    <fullName>Training_Amount_Paid_2__c</fullName>
    <label>Training Amount Paid 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>